<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.voot_austin.voot.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:maxHeight="100dp"
        android:minWidth="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/voot_header"
        android:layout_gravity="center"
        android:contentDescription="@string/header"/>

    <TextView
        android:id="@+id/user_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/user_name_placeholder"/>

    <include layout="@layout/location_layout"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/representatives_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Representatives"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/elections_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Upcoming_Elections"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/poll_locations_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Poll_Location"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/reminders_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Reminders"
            android:background="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>
