<resources>
    <string name="app_name">Voot</string>

    <!-- Navigation strings -->
    <string name="sign_out">Sign out</string>

    <!-- Homepage strings -->
    <string name="Location">Location:</string>
    <string name="location_placeholder">Austin, TX 78705</string>
    <string name="Representatives">Representatives</string>
    <string name="Poll_Location">Poll Location</string>
    <string name="Upcoming_Elections">Upcoming Elections</string>
    <string name="Reminders">Reminders</string>
    <string name="user_name_placeholder">John Smith</string>
    <string name="header">header</string>

    <!-- Representatives Activity Strings -->
    <string name="Your_Representatives">Your Representatives</string>
...
